fix 2 margin-right overflow issues

--- a/resources/sass/_dropdown.sass
+++ b/resources/sass/_dropdown.sass
@@ -82,6 +82,8 @@
   padding: 0
   flex: 0 1 auto
   display: flex
+  .navbar_item
+    margin-right: -1px
   &.dropdown-active
     .navbar_item.dropdown_toggle
       background-color: $navbar-hover
